#ifdef __GNUC__
#pragma GCC diagnostic push
#pragma GCC diagnostic ignored "-Wunused-function"
#endif
// Autogenerated with StateSmith 0.21.0-alpha-1+7e3f96c13426722a35ad6604c427da48d8538e48.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

#include "Dyad.h"
#include <stdbool.h> // required for `consume_event` flag
#include <string.h> // for memset

// This function is used when StateSmith doesn't know what the active leaf state is at
// compile time due to sub states or when multiple states need to be exited.
static void exit_up_to_state_handler(Dyad* sm, Dyad_StateId desired_state);

static void ROOT_enter(Dyad* sm);

static void ARMED_enter(Dyad* sm);

static void ARMED_exit(Dyad* sm);

static void ARMED_on_primary_release(Dyad* sm);

static void ARMED_on_secondary_repeat(Dyad* sm);

static void IDLE_enter(Dyad* sm);

static void IDLE_exit(Dyad* sm);

static void IDLE_on_primary_press(Dyad* sm);

static void PRIMARY_HELD_enter(Dyad* sm);

static void PRIMARY_HELD_exit(Dyad* sm);

static void PRIMARY_HELD_on_other_key(Dyad* sm);

static void PRIMARY_HELD_on_primary_release(Dyad* sm);

static void PRIMARY_HELD_on_secondary_match(Dyad* sm);


// State machine constructor. Must be called before start or dispatch event functions. Not thread safe.
void Dyad_ctor(Dyad* sm)
{
    memset(sm, 0, sizeof(*sm));
}

// Starts the state machine. Must be called before dispatching events. Not thread safe.
void Dyad_start(Dyad* sm)
{
    ROOT_enter(sm);
    // ROOT behavior
    // uml: TransitionTo(ROOT.<InitialState>)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `ROOT.<InitialState>`.
        // ROOT.<InitialState> is a pseudo state and cannot have an `enter` trigger.
        
        // ROOT.<InitialState> behavior
        // uml: TransitionTo(idle)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `idle`.
            IDLE_enter(sm);
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for ROOT.<InitialState>
    } // end of behavior for ROOT
}

// Dispatches an event to the state machine. Not thread safe.
// Note! This function assumes that the `event_id` parameter is valid.
void Dyad_dispatch_event(Dyad* sm, Dyad_EventId event_id)
{
    switch (sm->state_id)
    {
        // STATE: Dyad
        case Dyad_StateId_ROOT:
            // No events handled by this state (or its ancestors).
            break;
        
        // STATE: armed
        case Dyad_StateId_ARMED:
            switch (event_id)
            {
                case Dyad_EventId_ON_SECONDARY_REPEAT: ARMED_on_secondary_repeat(sm); break;
                case Dyad_EventId_ON_PRIMARY_RELEASE: ARMED_on_primary_release(sm); break;
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
        
        // STATE: idle
        case Dyad_StateId_IDLE:
            switch (event_id)
            {
                case Dyad_EventId_ON_PRIMARY_PRESS: IDLE_on_primary_press(sm); break;
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
        
        // STATE: primary_held
        case Dyad_StateId_PRIMARY_HELD:
            switch (event_id)
            {
                case Dyad_EventId_ON_SECONDARY_MATCH: PRIMARY_HELD_on_secondary_match(sm); break;
                case Dyad_EventId_ON_PRIMARY_RELEASE: PRIMARY_HELD_on_primary_release(sm); break;
                case Dyad_EventId_ON_OTHER_KEY: PRIMARY_HELD_on_other_key(sm); break;
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
    }
    
}

// This function is used when StateSmith doesn't know what the active leaf state is at
// compile time due to sub states or when multiple states need to be exited.
static void exit_up_to_state_handler(Dyad* sm, Dyad_StateId desired_state)
{
    while (sm->state_id != desired_state)
    {
        switch (sm->state_id)
        {
            case Dyad_StateId_ARMED: ARMED_exit(sm); break;
            
            case Dyad_StateId_IDLE: IDLE_exit(sm); break;
            
            case Dyad_StateId_PRIMARY_HELD: PRIMARY_HELD_exit(sm); break;
            
            default: return;  // Just to be safe. Prevents infinite loop if state ID memory is somehow corrupted.
        }
    }
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state ROOT
////////////////////////////////////////////////////////////////////////////////

static void ROOT_enter(Dyad* sm)
{
    sm->state_id = Dyad_StateId_ROOT;
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state ARMED
////////////////////////////////////////////////////////////////////////////////

static void ARMED_enter(Dyad* sm)
{
    sm->state_id = Dyad_StateId_ARMED;
}

static void ARMED_exit(Dyad* sm)
{
    sm->state_id = Dyad_StateId_ROOT;
}

static void ARMED_on_primary_release(Dyad* sm)
{
    // armed behavior
    // uml: on_primary_release TransitionTo(idle)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        ARMED_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `idle`.
        IDLE_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for armed
    
    // No ancestor handles this event.
}

static void ARMED_on_secondary_repeat(Dyad* sm)
{
    // armed behavior
    // uml: on_secondary_repeat TransitionTo(armed)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        ARMED_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `armed`.
        ARMED_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for armed
    
    // No ancestor handles this event.
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state IDLE
////////////////////////////////////////////////////////////////////////////////

static void IDLE_enter(Dyad* sm)
{
    sm->state_id = Dyad_StateId_IDLE;
}

static void IDLE_exit(Dyad* sm)
{
    sm->state_id = Dyad_StateId_ROOT;
}

static void IDLE_on_primary_press(Dyad* sm)
{
    // idle behavior
    // uml: on_primary_press TransitionTo(primary_held)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        IDLE_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `primary_held`.
        PRIMARY_HELD_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for idle
    
    // No ancestor handles this event.
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state PRIMARY_HELD
////////////////////////////////////////////////////////////////////////////////

static void PRIMARY_HELD_enter(Dyad* sm)
{
    sm->state_id = Dyad_StateId_PRIMARY_HELD;
}

static void PRIMARY_HELD_exit(Dyad* sm)
{
    sm->state_id = Dyad_StateId_ROOT;
}

static void PRIMARY_HELD_on_other_key(Dyad* sm)
{
    // primary_held behavior
    // uml: on_other_key TransitionTo(idle)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        PRIMARY_HELD_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `idle`.
        IDLE_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for primary_held
    
    // No ancestor handles this event.
}

static void PRIMARY_HELD_on_primary_release(Dyad* sm)
{
    // primary_held behavior
    // uml: on_primary_release TransitionTo(idle)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        PRIMARY_HELD_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `idle`.
        IDLE_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for primary_held
    
    // No ancestor handles this event.
}

static void PRIMARY_HELD_on_secondary_match(Dyad* sm)
{
    // primary_held behavior
    // uml: on_secondary_match TransitionTo(armed)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        PRIMARY_HELD_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `armed`.
        ARMED_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for primary_held
    
    // No ancestor handles this event.
}

// Thread safe.
char const * Dyad_state_id_to_string(Dyad_StateId id)
{
    switch (id)
    {
        case Dyad_StateId_ROOT: return "ROOT";
        case Dyad_StateId_ARMED: return "ARMED";
        case Dyad_StateId_IDLE: return "IDLE";
        case Dyad_StateId_PRIMARY_HELD: return "PRIMARY_HELD";
        default: return "?";
    }
}

// Thread safe.
char const * Dyad_event_id_to_string(Dyad_EventId id)
{
    switch (id)
    {
        case Dyad_EventId_ON_OTHER_KEY: return "ON_OTHER_KEY";
        case Dyad_EventId_ON_PRIMARY_PRESS: return "ON_PRIMARY_PRESS";
        case Dyad_EventId_ON_PRIMARY_RELEASE: return "ON_PRIMARY_RELEASE";
        case Dyad_EventId_ON_SECONDARY_MATCH: return "ON_SECONDARY_MATCH";
        case Dyad_EventId_ON_SECONDARY_REPEAT: return "ON_SECONDARY_REPEAT";
        default: return "?";
    }
}

#ifdef __GNUC__
#pragma GCC diagnostic pop
#endif
